--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,30 +1,117 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Satoshi Shuffle</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+      background: #f5f5f5;
+    }
+    .container {
+      background: white;
+      padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .bet-section {
+      margin: 20px 0;
+    }
+    .outcome-section {
+      margin: 30px 0;
+      padding: 20px;
+      background: #f0f0f0;
+      border-radius: 8px;
+    }
+    .verification-section {
+      margin: 20px 0;
+    }
+    input, select {
+      width: 100%;
+      padding: 10px;
+      margin: 5px 0;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+    }
+    button {
+      padding: 10px 20px;
+      background: #2196F3;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #1976D2;
+    }
+  </style>
 </head>
 <body>
-  <div class="header">
+  <header class="container">
     <h1>Satoshi Shuffle</h1>
-    <p>Provably Fair Betting (0–69,419)</p>
-  </div>
+    <p class="subtitle">Provably Fair Betting with Nostr & Lightning</p>
+    <p>House Edge: 1.9% | Range: 0–69,419</p>
+  </header>
 
   
-  <div class="bet-section">
-    <input type="number" id="betAmount" placeholder="Bet Amount (sats)" min="1">
-    <select id="rangeSelect">
-      <option value="10">10% Range (Odds: 9.81:1)</option>
+  <section class="container bet-section">
+    <h2>Place Your Bet</h2>
+    <form id="betForm">
+      <div class="form-group">
+        <label for="betAmount">Bet Amount (sats):</label>
+        <input type="number" id="betAmount" name="betAmount" min="1" required>
+      </div>
       
-    </select>
-    <button onclick="placeBet()">Place Bet</button>
-  </div>
+      <div class="form-group">
+        <label for="rangeSelect">Choose a Range:</label>
+        <select id="rangeSelect" name="rangeSelect" onchange="updateOdds()">
+          <option value="10">10% Range (0–6,941) | Odds: 9.81:1</option>
+          <option value="33">33% Range (0–23,140) | Odds: 2.97:1</option>
+          <option value="50" selected>50% Range (0–34,710) | Odds: 1.96:1</option>
+          <option value="66">66% Range (0–45,947) | Odds: 1.48:1</option>
+          <option value="90">90% Range (0–62,479) | Odds: 1.09:1</option>
+        </select>
+      </div>
+
+      <div class="form-group">
+        <button type="button" onclick="placeBet()">Place Bet</button>
+      </div>
+    </form>
+  </section>
 
   
-  <div class="outcome-section">
-    <p>Result: <span id="result"></span></p>
-    <p>Payout: <span id="payout"></span> sats</p>
-  </div>
+  <section class="container">
+    <h3>Current Server Seed (from Nostr):</h3>
+    <p id="serverSeedDisplay">[Not Available]</p>
+  </section>
+
+  
+  <section class="container outcome-section">
+    <h2>Last Result</h2>
+    <p><strong>Outcome Number:</strong> <span id="resultNumber">N/A</span></p>
+    <p><strong>Status:</strong> <span id="resultStatus">N/A</span></p>
+    <p><strong>Payout:</strong> <span id="payoutAmount">0 sats</span></p>
+  </section>
+
+  
+  <section class="container verification-section">
+    <h3>Verify Your Bet</h3>
+    <p>Enter your client secret to confirm the result:</p>
+    <input type="text" id="clientSecretInput" placeholder="Client Secret">
+    <button onclick="verifyOutcome()">Verify</button>
+    <p id="verifyStatus"></p>
+  </section>
+
+  
+  <footer class="container">
+    <p>Open-source on <a href="https://github.com/your-username/satoshi-shuffle" target="_blank">GitHub</a></p>
+    <p>Server Seed Events: <a href="https://nostr.band" target="_blank">View on Nostr</a></p>
+  </footer>
 
   <script src="app.js"></script>
 </body>
